--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "glushkovizer"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cfgrammar = "0.13.4"
+dot = "0.1.4"
 lrlex = "0.13.4"
 lrpar = "0.13.4"
 
