Re-implentation of automata & Glushkov's automata and documention make and verify small fix to reg.l blank char

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "glushkovizer"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cfgrammar = "0.13.4"
-dot = "0.1.4"
 lrlex = "0.13.4"
 lrpar = "0.13.4"
+petgraph = "0.6.4"
 
 [build-dependencies]
 cfgrammar = "0.13.4"
