--- a/glushkovizer/Cargo.toml
+++ b/glushkovizer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glushkovizer"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,9 @@ edition = "2021"
 cfgrammar = "0.13.4"
 lrlex = "0.13.4"
 lrpar = "0.13.4"
+thiserror = "1.0.60"
+
+[dev-dependencies]
 rand = "0.8.5"
 
 [build-dependencies]
