--- a/glushkovizer/Cargo.toml
+++ b/glushkovizer/Cargo.toml
@@ -6,14 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cfgrammar = "0.13.4"
-lrlex = "0.13.4"
-lrpar = "0.13.4"
-thiserror = "1.0.60"
+cfgrammar = "0.13"
+lrlex = "0.13"
+lrpar = "0.13"
+thiserror = "1.0"
+serde = { version = "1", features = ["derive"] }
 
 [dev-dependencies]
-rand = "0.8.5"
+rand = "0.8"
+serde_json = "1"
+serde_cbor = "0.11"
 
 [build-dependencies]
-cfgrammar = "0.13.4"
-lrlex = "0.13.4"
+cfgrammar = "0.13"
+lrlex = "0.13"
