--- a/glushkovizer-gtk4/Cargo.toml
+++ b/glushkovizer-gtk4/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glushkovizer-gtk4"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,3 +19,4 @@ glib-build-tools = "0.19"
 [features]
 default = ["dep:adw"]
 no-adwaita = []
+no-blp = []
