--- a/glushkovizer/Cargo.toml
+++ b/glushkovizer/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
 name = "glushkovizer"
-version = "0.19.1"
+version = "0.20.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cfgrammar = "0.13"
 lrlex = "0.13"
 lrpar = "0.13"
 thiserror = "1"
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1" }
 
 [dev-dependencies]
 rand = "0.8"
