--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Manipulation, regular expression and automaton library. Allows co
 keywords = ["glushkov", "automata", "regular expression", "regexp"]
 authors = ["Lurgrid <lurgrid@sagbot.com>"]
 repository = "https://github.com/Lurgrid/Glushkovizer"
-license = "GPLv3"
+license = "GPL-3"
 license-file = "LICENSE"
 
 [dependencies]
